src/objects/CNP_High_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processed_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pulled for Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>QTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MasterData Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Price__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Stream__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MDS -{00000}</displayFormat>
        <label>Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterData Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>